[package]
name = "rustyclaw"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust implementation of the OpenClaw personal AI assistant gateway"
license = "MIT"
repository = "https://github.com/frankhli843/rustyclaw"
authors = ["Frank Li"]
keywords = ["ai", "assistant", "gateway", "whatsapp", "telegram"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
subtle = "2"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
