[package]
name = "rustyclaw"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust implementation of the OpenClaw personal AI assistant gateway"
license = "MIT"
repository = "https://github.com/frankhli843/rustyclaw"
authors = ["Frank Li"]
keywords = ["ai", "assistant", "gateway", "whatsapp", "telegram"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
subtle = "2"
dirs = "6.0.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
async-trait = "0.1"
pin-project-lite = "0.2"
bytes = "1"
tokio-tungstenite = "0.26"
cron = "0.15"
glob = "0.3"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
